<resources>
    <string name="app_name">Geriat 3000</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_message">Message</string>
    <string name="on_create">onCreate</string>
    <string name="on_destroy">onDestroy</string>
    <string name="on_start">onStart</string>
    <string name="on_restart">onRestart</string>
    <string name="on_stop">onStop</string>
    <string name="on_pause">onPause</string>
    <string name="on_resume">onResume</string>
    <string name="add">add</string>
    <string name="cancel">cancel</string>
    <string name="Add_a_contact">Add a contact</string>
    <string name="name">name</string>
    <string name="phone_number">Phone Number</string>
</resources>
