<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >


    <Button
        android:id="@+id/dialogButtonOK"
        android:layout_width="100px"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:background="@color/colorPrimary"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/phoneContact"
        android:layout_toRightOf="@+id/dialogButtonCancel"
        android:layout_toEndOf="@+id/dialogButtonCancel" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/dialogButtonCancel"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/phoneContact"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:ems="10"
        android:id="@+id/nameContact"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phoneContact"
        android:text="@string/phone_number"
        android:layout_below="@+id/nameContact"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:text="@string/Add_a_contact"
        android:textAllCaps="true"
        android:textSize="@dimen/add_a_contact"
        android:textAlignment="center"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/dialogButtonOK"
        android:layout_alignEnd="@+id/dialogButtonOK"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
